<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true"
    tools:openDrawer="start">

    <include
        layout="@layout/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/gradient_grey"
        android:fitsSystemWindows="true"
        android:focusableInTouchMode="true"
        android:maxWidth="304dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            android:focusableInTouchMode="true">

            <include layout="@layout/nav_header_main" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cities"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:overScrollMode="never"
                android:visibility="visible"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_city" />

            <TextView
                android:id="@+id/emptyCitiesMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/empty_cities"
                android:textSize="18sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="17dp"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="bottom|center"
                android:text="@string/main_social_message"
                android:textColor="@color/rdColorSocial" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="35dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/fb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/cd_facebook"
                    android:focusable="true"
                    android:onClick="onClickSocial"
                    app:srcCompat="@drawable/bc_fb" />

                <ImageView
                    android:id="@+id/vk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/cd_vkontakte"
                    android:focusable="true"
                    android:onClick="onClickSocial"
                    app:srcCompat="@drawable/bc_vk" />

                <ImageView
                    android:id="@+id/tg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/cd_telegram"
                    android:focusable="true"
                    android:onClick="onClickSocial"
                    app:srcCompat="@drawable/bc_telegram" />

                <ImageView
                    android:id="@+id/zn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/cd_yandex_zen"
                    android:focusable="true"
                    android:onClick="onClickSocial"
                    app:srcCompat="@drawable/ic_bc_dzen" />

                <ImageView
                    android:id="@+id/tt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/cd_twitter"
                    android:focusable="true"
                    android:onClick="onClickSocial"
                    app:srcCompat="@drawable/bc_twitter" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>


